# mcini

./: .gitignore  CMakeLists.txt  README.md
include/: BaseConverter.h  BasicTypes.h  EventInitialState.h  MCIni-LinkDef.h  Nucleon.h  UEvent.h  UParticle.h  URun.h  UnigenLinkDef.h
include/jam/: JAMReader.h
macro/: config.sh  convert.C  convertDCMQGSM_GEM.C  convertDCMQGSM_SMM.C  convertDCMSMM.C  convertPHSD.C  convertSMASH.C  convertSmashParticles.C  convertUrQMD.C  demo.C  eccCent.C  filterUnigen.C  initQA.C  npart.C
macro/jam/: jam.cfg.template  runJAM.sh
src/: BaseConverter.cpp  BaseConverter.cxx  EventInitialState.cxx  Nucleon.cpp  Nucleon.cxx  UEvent.cxx  UParticle.cxx  URun.cxx
src/jam/: JAMPHReader.cxx  JAMRUNReader.cxx  JAMReader.cxx  JAMRunInfo.cxx
